--- a/index.css
+++ b/index.css
@@ -35,8 +35,11 @@ nav{
 .search{
     display: flex;
     align-items: center;
-    gap: 5%;
+    gap: 2%;
     
+}
+.search input{
+    height: 20px;
 }
 .search button:hover{
     background-color: rgb(50, 48, 148);
@@ -89,7 +92,7 @@ input{
 }
 button{
     background-color: black;
-    width: 20%;
+    width: 30%;
     height: 30px;
     color: white;
     font-size: larger;
